# mexican_train_solver

./: CMakeLists.txt  DominoInput.cpp  DominoInput.h  DominoList.h  DominoSolver.cpp  DominoSolver.h  DominoTile.h  HashDominoTilePtr.h  README  glad.c  main.cpp  train.cpp  train.h  ui.cpp
